duck/test/fail/datatype.duck
data A x y of B x y z
